internal/translate/testdata/basic_tcpproxy/in-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: basic-tls
spec:
  gatewayClassName: contour
