internal/translate/testdata/basic_tcpproxy/in-proxies.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic-tls
spec:
  virtualhost:
    fqdn: foo-basic-tls.bar.com
    tls:
      secretName: secret
  tcpproxy:
    services:
    - name: s1
      port: 80
