internal/translate/testdata/basic_tcpproxy/out-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: basic-tls
spec:
  gatewayClassName: contour
  listeners:
  - name: tls-0
    port: 443
    protocol: TLS
    hostname: foo-basic-tls.bar.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: secret
